@@ -7,6 +7,7 @@
  - Add: Cancel All button to dev ministry.
  - Fix: Abandoned planets' build queues are now cancelled.
  - Fix: Fissure medal when you cause a fissure with BHG.
+ - Fix: Training and Propaganda pays attention to the clock.
 
 3.0917:
  - Fix: Recalc stats when building 1+x plans.
